--- a/newwin.html
+++ b/newwin.html
@@ -6,8 +6,10 @@
 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<br><br><center><p>Hey! You're here because you tested what a new window malicious size could leak.</p>
-<p>Close this and refer back to the results on the main test.</p></center><br><br>
+<br><br><center>
+<p><span class="s1">don't</span> close immediately</p>
+<p><span class="s1">wait</span> at least 3 seconds for the <code>window.length</code> test</p>
+<p><span class="s1">then</span> close this window refer back to the results on the main test</p></center><br><br>
 <div class="hidden"><iframe src=""></iframe><div>
 </body>
 </html>
