--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -213,7 +213,7 @@
 		<tr class="togE"><td></td><td class="s2">error messages</td></tr>
 		<tr class="togE"><td>hash</td><td class="c mono" id="errh"></td></tr>
 			<tr class="togE"><td>error1</td><td class="c" id="err1"></td></tr>
-			<tr class="togE"><td id="labelErr2">error2</td><td class="c" id="err2"></td></tr>
+			<tr class="togE"><td>error2</td><td class="c" id="err2"></td></tr>
 			<tr class="togE"><td>error3</td><td class="c" id="err3"></td></tr>
 			<tr class="togE"><td>error4</td><td class="c" id="err4"></td></tr>
 			<tr class="togE" id="togE5"><td>error5</td><td class="c" id="err5"></td></tr>
