--- a/newwin.html
+++ b/newwin.html
@@ -3,13 +3,23 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>i'm a new window</title>
-<link rel="stylesheet" type="text/css" href="css/index.css">
+<style>
+body {background-color: #1a1a1a; color: #b3b3b3;}
+.s1 {background-color: #1a1a1a; color: #dc8c8c;;}
+.hidden {display: none;}
+</style>
 </head>
 <body>
 <br><br><center>
-<p><span class="s1">don't</span> close immediately</p>
-<p><span class="s1">wait</span> at least 3 seconds for the <code>window.length</code> test</p>
-<p><span class="s1">then</span> close this window refer back to the results on the main test</p></center><br><br>
-<div class="hidden"><iframe src=""></iframe><div>
+<p><span class="s1">don't</span> close immediately, for best results</p>
+<p><span class="s1">wait</span> several seconds for the <code>window.length</code>
+	<br> and <code>window.iframes</code> tests to finish</p>
+<p><span class="s1">then</span> close this window and refer back to the results on the main test</p></center><br><br>
+<div class="hidden">
+<iframe src=""></iframe>
+<iframe src=""></iframe>
+<iframe src=""></iframe>
+<iframe src=""></iframe>
+<iframe src=""></iframe><div>
 </body>
 </html>
