--- a/newwin.html
+++ b/newwin.html
@@ -5,16 +5,21 @@
 <title>i'm a new window</title>
 <style>
 body {background-color: #1a1a1a; color: #b3b3b3;}
-.s1 {background-color: #1a1a1a; color: #dc8c8c;;}
+h2 {font-size: 24px}
+.s1 {background-color: #1a1a1a; color: #dc8c8c;}
 .hidden {display: none;}
 </style>
 </head>
 <body>
-<br><br><center>
-<p><span class="s1">don't</span> close immediately, for best results</p>
-<p><span class="s1">wait</span> several seconds for the <code>window.length</code>
-	<br> and <code>window.iframes</code> tests to finish</p>
-<p><span class="s1">then</span> close this window and refer back to the results on the main test</p></center><br><br>
+<center>
+<h2>wait</h2>
+<p><span class="s1">don't close me</span><br>straight away<p>
+<p><span class="s1">wait</span> for the <code>window.length</code>
+	<br>and <code>window.iframes</code> tests
+	<br>to finish... about <span class="s1">five seconds</span>
+<p>
+<p><span class="s1">then</span> refer back to the<br>results on the main test</p>
+</center><br>
 <div class="hidden">
 <iframe src=""></iframe>
 <iframe src=""></iframe>
