--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -48,6 +48,7 @@
 	<!--hidden-->
 	<div class="hidden">
 		<div><input type="time" min="14:00:00" max="12:00:00" value="15:00:00" id="test76"></div>
+		<object id="test68"></object>
 		<div id="test73"></div>
 		<span id="sColorElement"></span>
 		<img id="branding" src="chrome://branding/content/about-wordmark.svg"></img>
