--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -301,11 +301,12 @@
 			<tr class="togL"><td>languages</td><td class="c" id="tzl0"></td></tr>
 			<tr class="togL"><td>language</td><td class="c" id="tzl1"></td></tr>
 			<tr class="togL"><td>languages[0]</td><td class="c" id="tzl2"></td></tr>
-			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="tzl3"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] locale</td><td class="c" id="tzl4"></td></tr>
+			<tr class="togL"><td>[DateTimeFormat] locale</td><td class="c" id="tzl3"></td></tr>
+			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="tzl4"></td></tr>
+			<tr class="togL"><td>[Intl.ListFormat] locale</td><td class="c" id="tzl5"></td></tr>
 		<tr class="togL"><td></td><td class="s4">timezone</td></tr>
-			<tr class="togL"><td>timezone offsets</td><td class="c" id="tzl5"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tzl6"></td></tr>
+			<tr class="togL"><td>timezone offsets</td><td class="c" id="tzl6"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tzl7"></td></tr>
 		<tr class="togL"><td></td><td class="s4">date/time & format</td></tr>
 			<tr class="togL"><td>date/time</td><td class="c" id="dtf0"></td></tr>
 			<tr class="togL"><td>toString</td><td class="c" id="dtf1"></td></tr>
