--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -322,6 +322,7 @@
 			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="dtf11"></td></tr>
 			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="dtf12"></td></tr>
 			<tr class="togL"><td>[relatedYear | yearName] Intl.DateTimeFormat</td><td class="c" id="dtf25"></td></tr>
+			<tr class="togL"><td>[dateStyle | timeStyle] Intl.DateTimeFormat</td><td class="c" id="dtf28"></td></tr>
 			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="dtf13"></td></tr>
 			<tr class="togL"><td>toTimeString</td><td class="c" id="dtf14"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="dtf15"></td></tr>
