--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -297,46 +297,47 @@
 			<label for="collapseL" class="lbl-toggle" id="labelL">&#9660; show details</label>
 		</td></tr>
 		<tr class="togL"><td></td><td class="s4">language & locale</td></tr>
-			<tr class="togL"><td>http_accept_language</td><td class="faint" id="tzl99"></td></tr>
-			<tr class="togL"><td>languages</td><td class="c" id="tzl0"></td></tr>
-			<tr class="togL"><td>language</td><td class="c" id="tzl1"></td></tr>
-			<tr class="togL"><td>languages[0]</td><td class="c" id="tzl2"></td></tr>
-			<tr class="togL"><td>[DateTimeFormat] locale</td><td class="c" id="tzl3"></td></tr>
-			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="tzl4"></td></tr>
-			<tr class="togL"><td>[Intl.ListFormat] locale</td><td class="c" id="tzl5"></td></tr>
+			<tr class="togL"><td>http_accept_language</td><td class="faint"></td></tr>
+			<tr class="togL"><td>languages</td><td class="c" id="ldt0"></td></tr>
+			<tr class="togL"><td>language</td><td class="c" id="ldt1"></td></tr>
+			<tr class="togL"><td>languages[0]</td><td class="c" id="ldt2"></td></tr>
+			<tr class="togL"><td>[DateTimeFormat] locale</td><td class="c" id="ldt3"></td></tr>
+			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="ldt4"></td></tr>
+			<tr class="togL"><td>[Intl.ListFormat] locale</td><td class="c" id="ldt5"></td></tr>
 		<tr class="togL"><td></td><td class="s4">timezone</td></tr>
-			<tr class="togL"><td>timezone offsets</td><td class="c" id="tzl6"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tzl7"></td></tr>
+			<tr class="togL"><td>timezone offsets</td><td class="c" id="ldt6"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="ldt7"></td></tr>
 		<tr class="togL"><td></td><td class="s4">date/time & format</td></tr>
-			<tr class="togL"><td>date/time</td><td class="c" id="dtf0"></td></tr>
-			<tr class="togL"><td>toString</td><td class="c" id="dtf1"></td></tr>
-			<tr class="togL"><td>[long] toLocaleString</td><td class="c" id="dtf2"></td></tr>
-			<tr class="togL"><td>[long] toLocaleDateString</td><td class="c" id="dtf3"></td></tr>
-			<tr class="togL"><td>[long] toLocaleTimeString</td><td class="c" id="dtf4"></td></tr>
-			<tr class="togL"><td>[long] Intl.DateTimeFormat</td><td class="c" id="dtf5"></td></tr>
-			<tr class="togL"><td>[formatToParts] Intl.DateTimeFormat</td><td class="c" id="dtf6"></td></tr>
-			<tr class="togL"><td>toGMTString</td><td class="c" id="dtf7"></td></tr>
-			<tr class="togL"><td>toUTCString</td><td class="c" id="dtf8"></td></tr>
-			<tr class="togL"><td>toLocaleString</td><td class="c" id="dtf9"></td></tr>
-			<tr class="togL"><td>[Typed Array] toLocaleString</td><td class="c" id="dtf10"></td></tr>
-			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="dtf11"></td></tr>
-			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="dtf12"></td></tr>
-			<tr class="togL"><td>[relatedYear | yearName] Intl.DateTimeFormat</td><td class="c" id="dtf25"></td></tr>
-			<tr class="togL"><td>[dateStyle | timeStyle] Intl.DateTimeFormat</td><td class="c" id="dtf28"></td></tr>
-			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="dtf13"></td></tr>
-			<tr class="togL"><td>toTimeString</td><td class="c" id="dtf14"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="dtf15"></td></tr>
-			<tr class="togL"><td>Intl.ListFormat</td><td class="c spaces" id="dtf27"></td></tr>
-			<tr class="togL"><td>[dayPeriod] Intl.DateTimeFormat</td><td class="c" id="dtf26"></td></tr>
-			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="dtf16"></td></tr>
-			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="dtf17"></td></tr>
-			<tr class="togL"><td>Intl.NumberFormat</td><td class="c" id="dtf18"></td></tr>
-			<tr class="togL"><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="dtf19"></td></tr>
-			<tr class="togL"><td>[BigInt] Intl.NumberFormat</td><td class="c" id="dtf20"></td></tr>
-			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="dtf21"></td></tr>
-			<tr class="togL"><td>[currency] toLocaleString </td><td class="c" id="dtf22"></td></tr>
-			<tr class="togL"><td>[Intl.DateTimeFormat] calendar</td><td class="c" id="dtf23"></td></tr>
-			<tr class="togL"><td>[DateTime | RelativeTime] numberingSystem</td><td class="c" id="dtf24"></td></tr>
+			<tr class="togL"><td>date/time</td><td class="c" id="ldt8"></td></tr>
+			<tr class="togL"><td>toString</td><td class="c" id="ldt9"></td></tr>
+			<tr class="togL"><td>[long] toLocaleString</td><td class="c" id="ldt10"></td></tr>
+			<tr class="togL"><td>[long] toLocaleDateString</td><td class="c" id="ldt11"></td></tr>
+			<tr class="togL"><td>[long] toLocaleTimeString</td><td class="c" id="ldt12"></td></tr>
+			<tr class="togL"><td>[long] Intl.DateTimeFormat</td><td class="c" id="ldt13"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.DateTimeFormat</td><td class="c" id="ldt14"></td></tr>
+			<tr class="togL"><td>toGMTString</td><td class="c" id="ldt15"></td></tr>
+			<tr class="togL"><td>toUTCString</td><td class="c" id="ldt16"></td></tr>
+			<tr class="togL"><td>toLocaleString</td><td class="c" id="ldt17"></td></tr>
+			<tr class="togL"><td>[Typed Array] toLocaleString</td><td class="c" id="ldt18"></td></tr>
+			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="ldt19"></td></tr>
+			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="ldt20"></td></tr>
+			<tr class="togL"><td>[relatedYear | yearName] Intl.DateTimeFormat</td><td class="c" id="ldt34"></td></tr>
+			<tr class="togL"><td>[dateStyle | timeStyle] Intl.DateTimeFormat</td><td class="c" id="ldt37"></td></tr>
+			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="ldt21"></td></tr>
+			<tr class="togL"><td>toTimeString</td><td class="c" id="ldt22"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="ldt23"></td></tr>
+			<tr class="togL"><td>Intl.ListFormat</td><td class="c spaces" id="ldt36"></td></tr>
+			<tr class="togL"><td>[dayPeriod] Intl.DateTimeFormat</td><td class="c" id="ldt35"></td></tr>
+			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="ldt24"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="ldt25"></td></tr>
+			<tr class="togL"><td>Intl.NumberFormat</td><td class="c" id="ldt26"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="ldt27"></td></tr>
+			<tr class="togL"><td>[BigInt] Intl.NumberFormat</td><td class="c" id="ldt28"></td></tr>
+			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="ldt29"></td></tr>
+			<tr class="togL"><td>[currency] toLocaleString </td><td class="c" id="ldt30"></td></tr>
+			<tr class="togL"><td>[Intl.DateTimeFormat] calendar</td><td class="c" id="ldt31"></td></tr>
+			<tr class="togL"><td>[DateTime | RelativeTime] numberingSystem</td>
+				<td><span class="c" id="ldt32"></span> | <span class="c" id="ldt33"></span></td></tr>
 		<tr class="togL"><td></td><td class="s4">geolocation</td></tr>
 			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
 				<span class="ttxt">geo.enabled</span></div> &nbsp [api] geolocation</td><td class="c" id="geo1"></td></tr>
@@ -760,11 +761,12 @@
 			<div>&nbsp [-moz-] colors</div></div></td><td class="c mono" id="mColorHash"></td></tr>
 		<tr><td>[system] colors</td><td class="c mono" id="sColorHash"></td></tr>
 		<tr><td>[CSS4 system] colors</td><td class="c mono" id="sColorHashNew"></td></tr>
-		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxtb">ui.systemUsesDarkTheme</span></div>
-			&nbsp [css | matchMedia] prefers-color-scheme</td><td><span id="cssPCS">
-			</span> | <span class="c" id="mmPCS"></span></td></tr>
-		<tr><td>[css | matchMedia] prefers-reduced-motion</td><td><span id="cssPRM"></span> | <span class="c" id="mmPRM"></span></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">ui.systemUsesDarkTheme</span></div>
+			&nbsp [css | matchMedia] prefers-color-scheme</td>
+			<td><span id="cssPCS"></span> | <span class="c" id="mmPCS"></span></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">ui.prefersReducedMotion</span></div>
+			&nbsp [css | matchMedia] prefers-reduced-motion</td>
+			<td><span id="cssPRM"></span> | <span class="c" id="mmPRM"></span></td></tr>
 		<tr><td colspan="2" class="showhide">
 			<input id="collapseCSS" class="toggle" type="checkbox" checked onchange="toggleitems(this, `CSS`)">
 			<label for="collapseCSS" class="lbl-toggle" id="labelCSS">&#9660; show details</label>
