--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -305,7 +305,7 @@
 			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="ldt4"></td></tr>
 			<tr class="togL"><td>[Intl.ListFormat] locale</td><td class="c" id="ldt5"></td></tr>
 		<tr class="togL"><td></td><td class="s4">timezone</td></tr>
-			<tr class="togL"><td>timezone offsets</td><td class="c" id="ldt6"></td></tr>
+			<tr class="togL"><td>timezone offsets | getTime</td><td class="c" id="ldt6"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="ldt7"></td></tr>
 		<tr class="togL"><td></td><td class="s4">date/time & format</td></tr>
 			<tr class="togL"><td>date/time</td><td class="c" id="ldt8"></td></tr>
