--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -555,7 +555,7 @@
 		<tr><td>isPointInStroke</td><td class="c mono isPointInStroke"></td></tr>
 		<tr><td>fillText</td><td class="c mono fillText"></td></tr>
 		<tr><td>strokeText</td><td class="c mono strokeText"></td></tr>
-		<tr><td colspan="2"><span class="no_color">canvas code courtesy of </span>
+		<tr><td colspan="2"><span class="no_color">canvas code based on work by </span>
 			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
 	</table>
@@ -581,7 +581,7 @@
 		<tr><td>readPixels</td><td class="c mono" id="glreadPixels"></td></tr>
 		<tr><td>[webgl] image</td><td class="mono faint" id="glimage1"></td></tr>
 		<tr><td>[webgl2] image</td><td class="mono faint" id="glimage2"></td></tr>
-		<tr><td colspan="2"><span class="no_color">canvas code courtesy of </span>
+		<tr><td colspan="2"><span class="no_color">webgl code based on work by </span>
 			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
 	</table>
@@ -767,6 +767,16 @@
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">ui.prefersReducedMotion</span></div>
 			&nbsp [css | matchMedia] prefers-reduced-motion</td>
 			<td><span id="cssPRM"></span> | <span class="c" id="mmPRM"></span></td></tr>
+		<!--<tr><td>[css | matchMedia] prefers-contrast</td>
+			<td><span id="cssPC"></span> | <span class="c" id="mmPC"></span></td></tr>
+		<tr><td>[css | matchMedia] prefers-reduced-transparency</td>
+			<td><span id="cssPRT"></span> | <span class="c" id="mmPRT"></span></td></tr>
+		<tr><td>[css | matchMedia] prefers-reduced-data</td>
+			<td><span id="cssPRD"></span> | <span class="c" id="mmPRD"></span></td></tr>
+		<tr><td>[css | matchMedia] forced-colors</td>
+			<td><span id="cssFC"></span> | <span class="c" id="mmFC"></span></td></tr>
+		<tr><td>[css | matchMedia] inverted-colors</td>
+			<td><span id="cssIC"></span> | <span class="c" id="mmIC"></span></td></tr>-->
 		<tr><td colspan="2" class="showhide">
 			<input id="collapseCSS" class="toggle" type="checkbox" checked onchange="toggleitems(this, `CSS`)">
 			<label for="collapseCSS" class="lbl-toggle" id="labelCSS">&#9660; show details</label>
