--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -10,8 +10,8 @@
 
 <body>
 	<!-- domrect -->
-	<div id="divrect">
-		<div id="insideDOMRect">
+	<div id="divrect" class="divrect1">
+		<div class="insideDOMRect">
 		<h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
 		<span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
