--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -340,7 +340,7 @@
 				<td><span class="c" id="ldt32"></span> | <span class="c" id="ldt33"></span></td></tr>
 		<tr class="togL"><td></td><td class="s4">geolocation</td></tr>
 			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
-				<span class="ttxt">geo.enabled</span></div> &nbsp [api] geolocation</td><td class="c" id="geo1"></td></tr>
+				<span class="ttxt">geo.enabled</span></div> &nbsp [api | window] geolocation</td><td class="c" id="geo1"></td></tr>
 			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
 				<span class="ttxtb">permissions.default.geo</span></div> &nbsp [permission] geolocation</td><td class="c" id="geo2"></td></tr>
 		<tr class="togL" colspan="2"><td></td></tr>
