--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -44,6 +44,7 @@
 		<div id="iframes"></div>
 		<div id="svgDiv"></div>
 		<div id="tScroll" style="width: 100px; height: 50px; border: 0px; overflow-y: scroll;"></div>
+		<div id="sysFont"></div>
 	</div>
 	<!--hidden-->
 	<div class="hidden">
@@ -761,6 +762,7 @@
 			<div>&nbsp [-moz-] colors</div></div></td><td class="c mono" id="mColorHash"></td></tr>
 		<tr><td>[system] colors</td><td class="c mono" id="sColorHash"></td></tr>
 		<tr><td>[CSS4 system] colors</td><td class="c mono" id="sColorHashNew"></td></tr>
+		<tr><td>[system] fonts</td><td class="c mono" id="sFontsHash"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">ui.systemUsesDarkTheme</span></div>
 			&nbsp [css | matchMedia] prefers-color-scheme</td>
 			<td><span id="cssPCS"></span> | <span class="c" id="mmPCS"></span></td></tr>
@@ -782,6 +784,7 @@
 			<label for="collapseCSS" class="lbl-toggle" id="labelCSS">&#9660; show details</label>
 		</td></tr>
 		<tr class="togCSS"><td>CSS4 system colors</td><td colspan="2" class="mono spaces" id="sColorHashData"></td></tr>
+		<tr class="togCSS"><td>system fonts</td><td colspan="2" class="mono spaces" id="sFontsHashData"></td></tr>
 		<tr class="togCSS" colspan="2"><td></td></tr>
 	</table>
 
