--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -769,9 +769,9 @@
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">ui.prefersReducedMotion</span></div>
 			&nbsp [css | matchMedia] prefers-reduced-motion</td>
 			<td><span id="cssPRM"></span> | <span class="c" id="mmPRM"></span></td></tr>
-		<!--<tr><td>[css | matchMedia] prefers-contrast</td>
+		<tr><td>[css | matchMedia] prefers-contrast</td>
 			<td><span id="cssPC"></span> | <span class="c" id="mmPC"></span></td></tr>
-		<tr><td>[css | matchMedia] prefers-reduced-transparency</td>
+		<!--<tr><td>[css | matchMedia] prefers-reduced-transparency</td>
 			<td><span id="cssPRT"></span> | <span class="c" id="mmPRT"></span></td></tr>
 		<tr><td>[css | matchMedia] prefers-reduced-data</td>
 			<td><span id="cssPRD"></span> | <span class="c" id="mmPRD"></span></td></tr>
