--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -66,6 +66,9 @@
 			<input type="date" id="widget7">
 			<textarea id="widget8"></textarea>
 		</div>
+		<div><canvas id="kcanvas1" width="16" height="16"></canvas>
+			<canvas id="kcanvas2" width="16" height="16"></canvas>
+		</div>
 	</div>
 
 	<table>
