--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -532,7 +532,7 @@
 			<tr class="togD1"><td>right</td><td id="dr437"></td><td colspan="2" id="dr438"></td><td id="dr439"></td><td id="dr440"></td><td id="dr441"></td><td id="dr442"></td></tr>
 			<tr class="togD1"><td>bottom</td><td id="dr443"></td><td colspan="2" id="dr444"></td><td id="dr445"></td><td id="dr446"></td><td id="dr447"></td><td id="dr448"></td></tr>
 			<tr class="togD"><td colspan="8"></td></tr>
-		<tr><td colspan="8"><span class="no_color">domrect code courtesy of </span>
+		<tr><td colspan="8"><span class="no_color">domrect code based on work by </span>
 			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
 	</table>
@@ -766,6 +766,7 @@
 		<tr><td>[system] colors</td><td class="c mono" id="sColorHash"></td></tr>
 		<tr><td>[CSS4 system] colors</td><td class="c mono" id="sColorHashNew"></td></tr>
 		<tr><td>[system] fonts</td><td class="c mono" id="sFontsHash"></td></tr>
+		<tr><td>computed styles <sup>1</sup></td><td class="c mono" id="sCStyles"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">ui.systemUsesDarkTheme</span></div>
 			&nbsp [css | matchMedia] prefers-color-scheme</td>
 			<td><span id="cssPCS"></span> | <span class="c" id="mmPCS"></span></td></tr>
@@ -789,6 +790,10 @@
 		<tr class="togCSS"><td>CSS4 system colors</td><td colspan="2" class="mono spaces" id="sColorHashData"></td></tr>
 		<tr class="togCSS"><td>system fonts</td><td colspan="2" class="mono spaces" id="sFontsHashData"></td></tr>
 		<tr class="togCSS" colspan="2"><td></td></tr>
+		<!--creds-->
+		<tr><td colspan="3"><span class="no_color">code based on work by </span>
+			<a target="_blank" class="blue" href="https://github.com/abrahamjuliot/creepjs">CreepJS</a> <sup>1</sup>
+		</td></tr>
 	</table>
 
 	<!--ciphers.js-->
