--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -471,7 +471,7 @@
 	<table id="tb8">
 		<col width="7%"><a name="domrect"></a><col width="15%"><col width="7%"><col width="8%"><col width="15%"><col width="15%"><col width="15%"><col width="18%">
 		<thead><tr><th colspan="8">
-			<div class="nav-title"><a href="#domrect">DOMRect</a>
+			<div class="nav-title"><a href="#domrect">DOMRect / SVG</a>
 			<div class="nav-up"><a href="#devices">&#9650;</a></div>
 			<div class="nav-down"><a href="#canvasd">&#9660;</a></div>
 			<div class="nav-right"><a name="domrectd"></a></div></div>
@@ -886,6 +886,7 @@
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.use_components_shim</span></div>
 			&nbsp component interfaces</td><td class="c mono" id="shim"></td></tr>
+		<tr><td colspan="2">iframe.contentWindow properties <sup>1</sup></td><td class="c mono" id="iProps"></td></tr>
 		<tr><td colspan="2">navigator properties</td><td class="c mono" id="nProto"></td></tr>
 		<tr><td colspan="3" class="showhide">
 			<input id="collapseM2" class="toggle" type="checkbox" checked onchange="toggleitems(this, `M2`)">
@@ -893,6 +894,10 @@
 		<tr class="togM2"><td>component</td><td colspan="2" id="shimdata"></td></tr>
 		<tr class="togM2"><td>navigator</td><td colspan="2" id="nProto2"></td></tr>
 		<tr class="togM2" colspan="2"><td></td></tr>
+		<!--creds-->
+		<tr><td colspan="3"><span class="no_color">code based on work by </span>
+			<a target="_blank" class="blue" href="https://github.com/abrahamjuliot/creepjs">CreepJS</a> <sup>1</sup>
+		</td></tr>
 	</table>
 
 	<!--perf-->
