--- a/newwin.html
+++ b/newwin.html
@@ -12,19 +12,9 @@ h2 {font-size: 24px}
 </head>
 <body>
 <center>
-<h2>wait</h2>
-<p><span class="s1">don't close me</span><br>straight away<p>
-<p><span class="s1">wait</span> for the <code>window.length</code>
-	<br>and <code>window.iframes</code> tests
-	<br>to finish... about <span class="s1">five seconds</span>
-<p>
-<p><span class="s1">then</span> refer back to the<br>results on the main test</p>
+<br>
+<p>feel free to <span class="s1">close</span> me<p>
+<p><span class="s1">refer</span> back to the<br>results on the main test</p>
 </center><br>
-<div class="hidden">
-<iframe src=""></iframe>
-<iframe src=""></iframe>
-<iframe src=""></iframe>
-<iframe src=""></iframe>
-<iframe src=""></iframe><div>
 </body>
 </html>
