--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -45,6 +45,8 @@
 		<div id="svgDiv"></div>
 		<div id="tScroll" style="width: 100px; height: 50px; border: 0px; overflow-y: scroll;"></div>
 		<div id="sysFont"></div>
+		<div><span id="test81a">AB</span></div>
+		<div><span id="test81b">A &#013;B</span></div>
 	</div>
 	<!--hidden-->
 	<div class="hidden">
