--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -768,7 +768,10 @@
 		<tr><td>[system] colors</td><td class="c mono" id="sColorHash"></td></tr>
 		<tr><td>[CSS4 system] colors</td><td class="c mono" id="sColorHashNew"></td></tr>
 		<tr><td>[system] fonts</td><td class="c mono" id="sFontsHash"></td></tr>
-		<tr><td>computed styles <sup>1</sup></td><td class="c mono" id="sCStyles"></td></tr>
+		<tr><td>computed styles <sup>1</sup></td><td class="c mono" id="cStyles4"></td></tr>
+		<tr><td>getComputedStyle <sup>1</sup></td><td class="c mono" id="cStyles0"></td></tr>
+		<tr><td>HTMLElement.style <sup>1</sup></td><td class="c mono" id="cStyles1"></td></tr>
+		<tr><td>CSSRuleList.style <sup>1</sup></td><td class="c mono" id="cStyles2"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">ui.systemUsesDarkTheme</span></div>
 			&nbsp [css | matchMedia] prefers-color-scheme</td>
 			<td><span id="cssPCS"></span> | <span class="c" id="mmPCS"></span></td></tr>
