--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -278,7 +278,7 @@
 			<tr class="togM"><td>cos(1e284)</td><td class="c mono" id="cos6"></td></tr>
 			<tr class="togM"><td>cos(1e75)</td><td class="c mono" id="cos7"></td></tr>
 		<tr class="togM"><td colspan="2"></td></tr>
-		<tr><td colspan="2"><span class="no_color">ECMAScript 6th edition math code courtesy of </span>
+		<tr><td colspan="2"><span class="no_color">ECMAScript 6th edition math code provided by </span>
 			<a target="_blank" class="blue" href="https://fpcentral.tbb.torproject.org/">Fingerprint Central</a></td></tr>
 	</table>
 
@@ -796,7 +796,7 @@
 		<tr class="togCSS"><td>system fonts</td><td colspan="2" class="mono spaces" id="sFontsHashData"></td></tr>
 		<tr class="togCSS" colspan="2"><td></td></tr>
 		<!--creds-->
-		<tr><td colspan="3"><span class="no_color">code based on work by </span>
+		<tr><td colspan="3"><span class="no_color">code provided by </span>
 			<a target="_blank" class="blue" href="https://github.com/abrahamjuliot/creepjs">CreepJS</a> <sup>1</sup>
 		</td></tr>
 	</table>
@@ -900,7 +900,7 @@
 		<tr class="togM2"><td>navigator</td><td colspan="2" id="nProto2"></td></tr>
 		<tr class="togM2" colspan="2"><td></td></tr>
 		<!--creds-->
-		<tr><td colspan="3"><span class="no_color">code based on work by </span>
+		<tr><td colspan="3"><span class="no_color">code provided by </span>
 			<a target="_blank" class="blue" href="https://github.com/abrahamjuliot/creepjs">CreepJS</a> <sup>1</sup>
 		</td></tr>
 	</table>
