--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -334,6 +334,7 @@
 			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="ldt23"></td></tr>
 			<tr class="togL"><td>Intl.ListFormat</td><td class="c spaces" id="ldt36"></td></tr>
 			<tr class="togL"><td>[dayPeriod] Intl.DateTimeFormat</td><td class="c" id="ldt35"></td></tr>
+			<tr class="togL"><td>[formatRange] Intl.DateTimeFormat</td><td class="c" id="ldt38"></td></tr>
 			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="ldt24"></td></tr>
 			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="ldt25"></td></tr>
 			<tr class="togL"><td>Intl.NumberFormat</td><td class="c" id="ldt26"></td></tr>
