--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -304,16 +304,10 @@
 		</td></tr>
 		<tr class="togL"><td></td><td class="s4">language & locale</td></tr>
 			<tr class="togL"><td>http_accept_language</td><td class="faint"></td></tr>
-			<tr class="togL"><td>languages</td><td class="c" id="ldt0"></td></tr>
-			<tr class="togL"><td>language</td><td class="c" id="ldt1"></td></tr>
-			<tr class="togL"><td>languages[0]</td><td class="c" id="ldt2"></td></tr>
-			<tr class="togL"><td>[Collator] locale</td><td class="c" id="ldt3"></td></tr>
-			<tr class="togL"><td>[DateTimeFormat] locale</td><td class="c" id="ldt4"></td></tr>
-			<tr class="togL"><td>[DisplayNames] locale</td><td class="c" id="ldt5"></td></tr>
-			<tr class="togL"><td>[ListFormat] locale</td><td class="c" id="ldt6"></td></tr>
-			<tr class="togL"><td>[NumberFormat] locale</td><td class="c" id="ldt7"></td></tr>
-			<tr class="togL"><td>[PluralRules] locale</td><td class="c" id="ldt8"></td></tr>
-			<tr class="togL"><td>[RelativeTimeFormat] locale</td><td class="c" id="ldt9"></td></tr>
+			<tr class="togL"><td>languages | language | languages[0]</td><td class="c" id="ldt2"></td></tr>
+			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
+				<span class="ttxt">Collator<br>DateTimeFormat<br>DisplayNames<br>ListFormat<br>NumberFormat
+				<br>PluralRules<br>RelativeTimeFormat</span></div> &nbsp resolvedOptions</td><td class="c" id="ldt9"></td></tr>
 		<tr class="togL"><td></td><td class="s4">timezone</td></tr>
 			<tr class="togL"><td>timezoneOffset | getTime | Date.parse</td><td class="c" id="ldt10"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="ldt11"></td></tr>
