--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -333,6 +333,7 @@
 			<tr class="togL"><td>Intl.ListFormat</td><td class="c spaces" id="ldt40"></td></tr>
 			<tr class="togL"><td>[dayPeriod] Intl.DateTimeFormat</td><td class="c" id="ldt39"></td></tr>
 			<tr class="togL"><td>[formatRange] Intl.DateTimeFormat</td><td class="c" id="ldt42"></td></tr>
+			<tr class="togL"><td>Intl.PluralRules</td><td class="c" id="ldt43"></td></tr>
 			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="ldt28"></td></tr>
 			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="ldt29"></td></tr>
 			<tr class="togL"><td>Intl.NumberFormat</td><td class="c" id="ldt30"></td></tr>
