--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>TZP</title>
+	<link rel="icon" type="image/png" href="chrome://branding/content/icon32.png">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script src="js/globals.js"></script>
 	<script src="js/generic.js"></script>
