--- a/math.html
+++ b/math.html
@@ -11,16 +11,24 @@
 </head>
 <body>
 	<br>
-
-	<table id="tb2">
+	<table id="tb3">
 		<col width="25%"><col width="75%">
 		<thead><tr><th colspan="2">math</th></tr></thead>
+		<tr><td>function</td><td class="c mono" id="hash1"></td></tr>
+		<tr><td>polyfill</td><td class="c mono" id="hash2"></td></tr>
+		<tr><td colspan="2" class="center"></td></tr>
 
-		<tr><td>[all] hash</td><td class="c mono" id="hash0"></td></tr>
-		<tr><td>[function] hash</td><td class="c mono" id="hash1"></td></tr>
-		<tr><td>[polyfill] hash</td><td class="c mono" id="hash2"></td></tr>
-		<tr><td>data<br><br>
-				<button class="btn2 btn" onClick="copyclip(`mathdata`)">[ copy to clipboard ]</button></td>
+		<tr><td></td><td class="s3">function vs polyfill</td></tr>
+		<tr><td>diffs</td><td class="c mono" id="diff0"></td></tr>
+		<tr><td colspan="2" class="center"></td></tr>
+
+		<tr><td></td><td class="s3">vs control [FF68-64bit Win7-64bit]</td></tr>
+		<tr><td>function</td><td class="c mono" id="diff1"></td></tr>
+		<tr><td>polyfill</td><td class="c mono" id="diff2"></td></tr>
+		<tr><td colspan="2" class="center"></td></tr>
+
+		<tr><td colspan="2" class="center">--- data ---</td></tr>
+		<tr><td><button class="btn3 btn" onClick="copyclip(`mathdata`)">[ copy to clipboard ]</button></td>
 			<td class="c mono spaces" id="mathdata"></td></tr>
 	</table>
 	<br>
@@ -30,129 +38,172 @@
 
 function outputMath() {
 
-		let mT = sg+ " true" + sc,
-			mF = sb + "false" +sc,
-			mN = "   n/a"
-
-		let test10 = Math.log((1.5) / (.5)) / 2 // atanh(0.5)
-		let test20 = Math.exp(1) - 1 // expm1(1)
-		let y = Math.exp(1)
-		let test46 = (y - 1 / y) / 2 // sinh(1)
-
-
-		// testing creep
 		let n = 0.123
 		let bigN = 5.860847362277284e+38
 		let fns = [
-			['acos', [n], 0],
-			['acos', [Math.SQRT1_2], 1],
-			['acosh', [1e308], 2],
-			['acosh', [Math.PI], 3],
-			['acosh', [Math.SQRT2], 4],
-			['asin', [n], 5],
-			['asinh', [1e300], 6],
-			['asinh', [Math.PI], 7],
-			['atan', [2], 8],
-			['atan', [Math.PI], 9],
-			['atanh', [0.5], 10, test10],
-			['atan2', [1e-310, 2], 11],
-			['atan2', [Math.PI, 2], 12],
-			['cbrt', [100], 13],
-			['cbrt', [Math.PI], 14],
-			['cos', [n], 15],
-			['cos', [Math.PI], 16],
-			['cos', [bigN],17], // creep says unique in Tor
-			['cosh', [1],18],
-			['cosh', [Math.PI], 19],
-			['expm1', [1],20, test20],
-			['expm1', [Math.PI], 21],
-			['exp', [n], 22],
-			['exp', [Math.PI], 23],
-			['hypot', [1, 2, 3, 4, 5, 6], 24],
-			['hypot', [bigN, bigN], 25],
-			['log', [n], 26],
-			['log', [Math.PI], 27],
-			['log1p', [n], 28],
-			['log1p', [Math.PI], 29],
-			['log10', [n], 30],
-			['log10', [Math.PI], 31],
-			['log10', [Math.E], 32],
-			['log10', [Math.LN2], 33],
-			['log10', [Math.LOG2E], 34],
-			['log10', [Math.LOG10E], 35],
-			['log10', [Math.SQRT1_2], 36],
-			['log10', [Math.SQRT2], 37],
-			['sin', [bigN], 38], // creep says unique in Tor
-			['sin', [Math.PI], 39], // creep says unique in Tor
-			['sin', [Math.E], 40],
-			['sin', [Math.LN2], 41],
-			['sin', [Math.LOG2E], 42],
-			['sin', [Math.LOG10E], 43],
-			['sin', [Math.SQRT1_2], 44],
-			['sin', [Math.SQRT2], 45],
-			['sinh', [1], 46, test46],
-			['sinh', [Math.PI], 47],
-			['sinh', [Math.E], 48],
-			['sinh', [Math.LN2], 49],
-			['sinh', [Math.LOG2E], 50],
-			['sinh', [Math.LOG10E], 51],
-			['sinh', [Math.SQRT1_2], 52],
-			['sinh', [Math.SQRT2], 53],
-			['sqrt', [n], 54],
-			['sqrt', [Math.PI], 55],
-			['tan', [-1e308], 56],
-			['tan', [Math.PI], 57],
-			['tanh', [n], 58],
-			['tanh', [Math.PI], 59],
-			['pow', [n, -100], 60],
-			['pow', [Math.PI, -100], 61],
-			['pow', [Math.E, -100], 62],
-			['pow', [Math.LN2, -100], 63],
-			['pow', [Math.LN10, -100], 64],
-			['pow', [Math.LOG2E, -100], 65],
-			['pow', [Math.LOG10E, -100], 66],
-			['pow', [Math.SQRT1_2, -100], 67],
-			['pow', [Math.SQRT2, -100], 68]
+			// [function, value, testnumber for easy reference, control
+			// control value is FF78 64bit on Windows7 64bit
+			['acos', [n], 0, 1.4474840516030247],
+			['acos', [Math.SQRT1_2], 1, 0.7853981633974483],
+			['acosh', [1e308], 2, 709.889355822726],
+			['acosh', [Math.PI], 3, 1.811526272460853],
+			['acosh', [Math.SQRT2], 4, 0.881373587019543],
+			['asin', [n], 5, 0.12331227519187199],
+			['asinh', [1e300], 6, 691.4686750787736],
+			['asinh', [Math.PI], 7, 1.8622957433108482],
+			['atan', [2], 8, 1.1071487177940904],
+			['atan', [Math.PI], 9, 1.2626272556789115],
+			['atanh', [0.5], 10, 0.5493061443340548],
+			['atan2', [1e-310, 2], 11, 5e-311],
+			['atan2', [Math.PI, 2], 12, 1.0038848218538872],
+			['cbrt', [100], 13, 4.641588833612779],
+			['cbrt', [Math.PI], 14, 1.4645918875615231],
+			['cos', [n], 15, 0.9924450321351935],
+			['cos', [Math.PI], 16, -1],
+			['cos', [bigN],17, -0.10868049424995659], // creep says unique in Tor
+			['cosh', [1],18, 1.5430806348152437],
+			['cosh', [Math.PI], 19, 11.591953275521519],
+			['expm1', [1],20, 1.718281828459045],
+			['expm1', [Math.PI], 21, 22.140692632779267],
+			['exp', [n], 22, 1.1308844209474893],
+			['exp', [Math.PI], 23, 23.140692632779267],
+			['hypot', [1, 2, 3, 4, 5, 6], 24, 9.539392014169456],
+			['hypot', [bigN, bigN], 25, 8.288489826731114e+38],
+			['log', [n], 26, -2.0955709236097197],
+			['log', [Math.PI], 27, 1.1447298858494002],
+			['log1p', [n], 28, 0.11600367575630613],
+			['log1p', [Math.PI], 29, 1.4210804127942926],
+			['log10', [n], 30, -0.9100948885606021],
+			['log10', [Math.PI], 31, 0.49714987269413385],
+			['log10', [Math.E], 32, 0.4342944819032518],
+			['log10', [Math.LN2], 33, -0.1591745389548616],
+			['log10', [Math.LOG2E], 34, 0.15917453895486158],
+			['log10', [Math.LOG10E], 35, -0.36221568869946325],
+			['log10', [Math.SQRT1_2], 36, -0.15051499783199057],
+			['log10', [Math.SQRT2], 37, 0.15051499783199063],
+			['sin', [bigN], 38, 0.994076732536068], // creep says unique in Tor
+			['sin', [Math.PI], 39, 1.2246467991473532e-16], // creep says unique in Tor
+			['sin', [Math.E], 40, 0.41078129050290885],
+			['sin', [Math.LN2], 41, 0.6389612763136348],
+			['sin', [Math.LOG2E], 42, 0.9918062443936637],
+			['sin', [Math.LOG10E], 43, 0.4207704833137573],
+			['sin', [Math.SQRT1_2], 44, 0.6496369390800625],
+			['sin', [Math.SQRT2], 45, 0.9877659459927356],
+			['sinh', [1], 46, 1.1752011936438014],
+			['sinh', [Math.PI], 47, 11.548739357257748],
+			['sinh', [Math.E], 48, 7.544137102816975],
+			['sinh', [Math.LN2], 49, 0.75],
+			['sinh', [Math.LOG2E], 50, 1.9978980091062795],
+			['sinh', [Math.LOG10E], 51, 0.44807597941469024],
+			['sinh', [Math.SQRT1_2], 52, 0.7675231451261164],
+			['sinh', [Math.SQRT2], 53, 1.935066822174357],
+			['sqrt', [n], 54, 0.3507135583350036],
+			['sqrt', [Math.PI], 55, 1.7724538509055159],
+			['tan', [-1e308], 56, 0.5086861259107568],
+			['tan', [Math.PI], 57, -1.2246467991473532e-16],
+			['tanh', [n], 58, 0.12238344189440875],
+			['tanh', [Math.PI], 59, 0.99627207622075],
+			['pow', [n, -100], 60, 1.0220893335845176e+91],
+			['pow', [Math.PI, -100], 61, 1.9275814160560185e-50],
+			['pow', [Math.E, -100], 62, 3.720075976020851e-44],
+			['pow', [Math.LN2, -100], 63, 8269017203802410],
+			['pow', [Math.LN10, -100], 64, 6.003867926738811e-37],
+			['pow', [Math.LOG2E, -100], 65, 1.2093335584550061e-16],
+			['pow', [Math.LOG10E, -100], 66, 1.665592934758592e+36],
+			['pow', [Math.SQRT1_2, -100], 67, 1125899906842611.5],
+			['pow', [Math.SQRT2, -100], 68, 8.881784197001154e-16]
 		]
 
-		let math0 = [], math1 = [], math2 = []
-		let ipad = "", compare = ""
+		// polyfills
+		let polyfills = [], result = "", control = ""
+		for(let i=0; i < fns.length; i++) {
+			result = "n/a", control = "n/a"
+			if (i == 10) {
+				result = Math.log((1.5) / (.5)) / 2 // atanh(0.5)
+				control = 0.5493061443340548
+			} else if (i == 20) {
+				result = Math.exp(1) - 1 // expm1(1)
+				control = 1.718281828459045
+			} else if (i == 46) {
+				result = ((Math.exp(1)) - 1 / (Math.exp(1))) / 2 // sinh(1)
+				control = 1.1752011936438014
+			}
+			polyfills.push(result +":" + control)
+		}
+		//console.debug(polyfills)
+
+		// build test results
+		let	math1 = [],	// functions
+			math2 = [], // polyfills
+			display = []
+
+		let polymatch = [], fnmatch = [] // do not match control
+		let diffs = [] // fn + poly don't match
 
 		for(let i=0; i < fns.length; i++) {
 			let fn = fns[i]
-			ipad = (i.toString()).padStart(2)
-			let result1 = Math[fn[0]](...fn[1])
-			let result2 = fn[3]
-			compare = mN
+			let ipad = (i.toString()).padStart(2)
+			let fnResult = Math[fn[0]](...fn[1])
+				fnResult = fnResult.toString()
+			let fnControl = fn[3].toString()
+			let polyResult = polyfills[i].split(":")[0]
+			let polyControl = polyfills[i].split(":")[1]
 
-			if (result2 == undefined) {
-				compare = mN + ": " + result1
-			} else {
-				math2.push(i + ": " + result2)
-				compare = (result1 == result2 ? mT +": "+ result1 : mF +": "+ result1 + "<br>          "+ so + result2 + sc)
+			// fn results
+			let isFnDiff = false, isPolyDiff = false
+			if (fnResult !== fnControl) {
+				isFnDiff = true
+				fnmatch.push(i+":"+fnControl +":"+fnResult)
 			}
-			math0.push(ipad + ":" + compare)
-			math1.push(i + ": " + result1)
+			math1.push(i+":"+fnResult)
+
+			// poly results
+			if (polyResult !== "n/a") {
+				if (polyResult !== polyControl) {
+					isPolyDiff = true
+					polymatch.push(i+":"+polyControl +":"+polyResult)
+				}
+				math2.push(i+":"+polyResult)
+				// does not match fn
+				if (polyResult !== fnResult) {
+					diffs.push(i+":"+fnResult+":"+polyResult)
+				}
+			}
+			// display
+			if (isFnDiff) { fnResult = s1.trim() + fnResult + sc }
+			if (isPolyDiff) { polyResult = s1.trim() + polyResult + sc }
+			if (polyResult !== "n/a") {
+				fnResult += ", " + polyResult
+			}
+			display.push(ipad+": "+ fnResult)
 		}
+		dom.hash1.innerHTML = sha1(math1.join()) + s3 +"["+ math1.length +"]"+sc
+		dom.hash2.innerHTML = sha1(math2.join()) + s3 +"["+ math2.length +"]"+sc
+		dom.mathdata.innerHTML = display.join("<br>")
 
-		dom.hash0.innerHTML = sha1(math0.join()) + so +"["+ math0.length +"]"+sc
-		dom.hash1.innerHTML = sha1(math1.join()) + so +"["+ math1.length +"]"+sc
-		dom.hash2.innerHTML = sha1(math2.join()) + so +"["+ math2.length +"]"+sc
-		dom.mathdata.innerHTML = math0.join("<br>")
+		// does not match control
+		function output_diffs(array, type) {
+			let output = []
+			if (array.length > 0) {
+				for(let i=0; i < array.length; i++) {
+					let part0 = array[i].split(":")[0]
+						part0 = (part0.toString()).padStart(2)
+					let part1 = array[i].split(":")[1]
+					let part2 = array[i].split(":")[2]
+					output.push(part0 + ": expected " + sg + part1 + sc + " got " + s2 + part2 + sc)
+				}
+				document.getElementById("diff" + type).innerHTML = output.join("<br>")
+			} else {
+				document.getElementById("diff" + type).innerHTML = "they all match"
+			}
+		}
+		output_diffs(diffs, 0)
+		output_diffs(fnmatch, 1)
+		output_diffs(polymatch, 2)
 
-}
 
 
-function rerunVersion() {
-	// clear
-	let items = document.getElementsByClassName("c mono")
-	for(let i=0; i < items.length; i++) {
-		items[i].innerHTML = "&nbsp"
-	}
-	// pause so users see change
-	setTimeout(function() {
-		outputMath()
-	}, 170)
+
 }
 
 outputMath()
