--- a/math.html
+++ b/math.html
@@ -14,6 +14,7 @@
 	<table id="tb3">
 		<col width="25%"><col width="75%">
 		<thead><tr><th colspan="2">math</th></tr></thead>
+		<tr><td>hash</td><td class="c mono" id="hash0"></td></tr>
 		<tr><td>function</td><td class="c mono" id="hash1"></td></tr>
 		<tr><td>polyfill</td><td class="c mono" id="hash2"></td></tr>
 		<tr><td colspan="2" class="center"></td></tr>
@@ -177,8 +178,12 @@ function outputMath() {
 			}
 			display.push(ipad+": "+ fnResult)
 		}
-		dom.hash1.innerHTML = sha1(math1.join()) + s3 +"["+ math1.length +"]"+sc
-		dom.hash2.innerHTML = sha1(math2.join()) + s3 +"["+ math2.length +"]"+sc
+		let hash1 = sha1(math1.join())
+		let hash2 = sha1(math2.join())
+		let hash0 = sha1(hash1 + hash2)
+		dom.hash1.innerHTML = hash1 + s3 +"["+ math1.length +"]"+sc
+		dom.hash2.innerHTML = hash2 + s3 +"["+ math2.length +"]"+sc
+		dom.hash0.innerHTML = hash0 + s3 +"["+ (math1.length + math2.length) +"]"+sc
 		dom.mathdata.innerHTML = display.join("<br>")
 
 		// does not match control
