--- a/math.html
+++ b/math.html
@@ -19,6 +19,10 @@
 		<tr><td>polyfill</td><td class="c mono" id="hash2"></td></tr>
 		<tr><td colspan="2" class="center"></td></tr>
 
+		<tr><td></td><td class="s3">tests in play</td></tr>
+		<tr><td>test no's</td><td class="c mono" id="num"></td></tr>
+		<tr><td colspan="2" class="center"></td></tr>
+
 		<tr><td></td><td class="s3">function vs polyfill</td></tr>
 		<tr><td>diffs</td><td class="c mono" id="diff0"></td></tr>
 		<tr><td colspan="2" class="center"></td></tr>
@@ -131,12 +135,12 @@ function outputMath() {
 			}
 			polyfills.push(result +":" + control)
 		}
-		//console.debug(polyfills)
 
 		// build test results
 		let	math1 = [],	// functions
 			math2 = [], // polyfills
-			display = []
+			display = [],
+			numbers = [] // numbers which make a difference
 
 		let polymatch = [], fnmatch = [] // do not match control
 		let diffs = [] // fn + poly don't match
@@ -155,6 +159,7 @@ function outputMath() {
 			if (fnResult !== fnControl) {
 				isFnDiff = true
 				fnmatch.push(i+":"+fnControl +":"+fnResult)
+				numbers.push(i)
 			}
 			math1.push(i+":"+fnResult)
 
@@ -163,11 +168,13 @@ function outputMath() {
 				if (polyResult !== polyControl) {
 					isPolyDiff = true
 					polymatch.push(i+":"+polyControl +":"+polyResult)
+					numbers.push(i+"p")
 				}
 				math2.push(i+":"+polyResult)
 				// does not match fn
 				if (polyResult !== fnResult) {
 					diffs.push(i+":"+fnResult+":"+polyResult)
+					numbers.push(i+"p")
 				}
 			}
 			// display
@@ -185,6 +192,12 @@ function outputMath() {
 		dom.hash2.innerHTML = hash2 + s3 +"["+ math2.length +"]"+sc
 		dom.hash0.innerHTML = hash0 + s3 +"["+ (math1.length + math2.length) +"]"+sc
 		dom.mathdata.innerHTML = display.join("<br>")
+
+		// useful numbers
+		numbers.sort((a,b) => a-b)
+		numbers = numbers.filter(function(item, position) {return numbers.indexOf(item) === position})
+		numbers.sort((a,b) => a-b)
+		dom.num = numbers.join(", ")
 
 		// does not match control
 		function output_diffs(array, type) {
@@ -205,9 +218,6 @@ function outputMath() {
 		output_diffs(diffs, 0)
 		output_diffs(fnmatch, 1)
 		output_diffs(polymatch, 2)
-
-
-
 
 }
 
